<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chrps_visual_servo</name>
  <version>1.0.0</version>
  <description>Visual servoing for Franka Research 3 robot using ViSP and Intel RealSense camera with AprilTag detection</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>GPL-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ament_index_cpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>